--- a/src/functions/_number.scss
+++ b/src/functions/_number.scss
@@ -10,6 +10,9 @@
 /// @return {number}
 
 @function number($string) {
+
+	$string: string($string);
+
 	// Matrices
 	$strings: '0' '1' '2' '3' '4' '5' '6' '7' '8' '9';
 	$numbers:  0   1   2   3   4   5   6   7   8   9;
